repo_name a mkdocs.yml

--- a/404.html
+++ b/404.html
@@ -160,7 +160,7 @@
     </div>
   
   <div class="md-source__repository">
-    tzinm/Tipstabet
+    tzinm/tipstabet
   </div>
 </a>
           </div>
@@ -305,7 +305,7 @@
     </div>
   
   <div class="md-source__repository">
-    tzinm/Tipstabet
+    tzinm/tipstabet
   </div>
 </a>
     </div>
