repo_url a mkdocs.yml

--- a/404.html
+++ b/404.html
@@ -151,7 +151,7 @@
 
   
 
-<a href="https://github.com/tzinm/Tipstabet/" title="Ir al repositorio" class="md-source" data-md-source="github">
+<a href="https://github.com/tzinm/tipstabet/" title="Ir al repositorio" class="md-source" data-md-source="github">
   
     <div class="md-source__icon">
       <svg viewBox="0 0 24 24" width="24" height="24">
@@ -296,7 +296,7 @@
 
   
 
-<a href="https://github.com/tzinm/Tipstabet/" title="Ir al repositorio" class="md-source" data-md-source="github">
+<a href="https://github.com/tzinm/tipstabet/" title="Ir al repositorio" class="md-source" data-md-source="github">
   
     <div class="md-source__icon">
       <svg viewBox="0 0 24 24" width="24" height="24">
